kubernetes/manifests/immich/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http-route
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: immich.k8s.nullservers.com
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: cilium-gateway-system
  hostnames:
  - "immich.k8s.nullservers.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      port: 2283
